# zlang

./: .gitignore  Cargo.toml  LICENSE  PROJECT.md  README.md  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
scripts/: install.js  native.js  prepare-release-asset.js  stage-prebuilt.js
sdk/lightwallet/: LightWalletClient.js
sdk/lightwallet/proto/: compact_formats.proto  service.proto
sdk/synchronizer/: ZcashSynchronizer.js
src/: lib.rs
test/: index.test.js  integration.test.js
