[package]
name = "zcash_zip321_alpha_native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip32 = "0.2"
zcash_address = "0.10"
zcash_keys = { version = "0.12", features = ["orchard", "sapling", "transparent-inputs"] }
zcash_protocol = { version = "0.7", features = ["local-consensus"] }
zip321 = "0.6"
