[package]
name = "zcash_zip321_alpha_native"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4"
rand = "0.8"
rusqlite = "0.37"
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
prost = "0.14"
orchard = "0.11"
sapling = { package = "sapling-crypto", version = "0.5", default-features = false }
zip32 = "0.2"
zcash_address = "0.10"
zcash_client_backend = { version = "0.21", features = ["orchard", "transparent-inputs"] }
zcash_client_sqlite = { version = "0.19", features = ["orchard", "transparent-inputs"] }
zcash_keys = { version = "0.12", features = ["orchard", "sapling", "transparent-inputs"] }
zcash_protocol = { version = "0.7", features = ["local-consensus"] }
zcash_script = "0.4"
zcash_transparent = "0.6"
zip321 = "0.6"
